[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/face.png" type="Texture" id=1]
[ext_resource path="res://scripts/overworld_node.gd" type="Script" id=2]
[ext_resource path="res://assets/unlocked.png" type="Texture" id=3]
[ext_resource path="res://assets/reached.png" type="Texture" id=4]
[ext_resource path="res://assets/timer.png" type="Texture" id=5]

[node name="ow_node_001" type="TextureButton" groups=["save_me", "to_be_saved"]]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="reached_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 49, 27 )
texture = ExtResource( 4 )

[node name="unlocked_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 49, 27 )
texture = ExtResource( 3 )

[node name="ow_node_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 49, 27 )
texture = ExtResource( 1 )

[node name="encounter_label_name" type="Label" parent="."]
margin_left = 33.0
margin_top = 51.0
margin_right = 73.0
margin_bottom = 65.0

[node name="mid_fight_enemy_characters_v2" type="Node" parent="."]

[node name="reward_timer_label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 6.0
margin_right = 80.0
margin_bottom = 20.0
text = "reward_timer"

[node name="Sprite" type="Sprite" parent="reward_timer_label"]
position = Vector2( -13, 5 )
texture = ExtResource( 5 )
